<resources>
    <string name="app_name">LifeSource</string>
    <string name="blood_donation_app">LifeSource</string>
    <string name="donate_blood_and_save_lives">Donate Because You Care</string>
    <string name="hello_welcome_to_this_application">Hello, welcome to this application</string>
    <string name="what_best_describes_you">What best describes you?</string>
    <string name="donor_registration">Donor Registration</string>
    <string name="recipient_registration">Recipient Registration</string>
    <string name="already_registered_sign_in">Already registered? Sign In</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_id_number">Enter ID Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_page">Login Page</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="full_name">Full Name</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="home">Home</string>
    <string name="donors_email">Donors Email</string>
    <string name="blood_groups">Blood Groups</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="actions">Actions</string>
    <string name="communicate">Communicate</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="a_positive">A Positive</string>
    <string name="a_negative">A Negative</string>
    <string name="b_positive">B Positive</string>
    <string name="b_negative">B Negative</string>
    <string name="ab_positive">AB Positive</string>
    <string name="ab_negative">AB Negative</string>
    <string name="o_positive">O Positive</string>
    <string name="o_negative">O Negative</string>
    <string name="email">Email</string>
    <string name="compatible_with_me">Compatible with me</string>
    <string name="email_sent_successfully">Email sent successfully</string>
    <string name="reset_your_password_here">Reset your password here</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="reset_my_email">Reset</string>
    <string name="stay_anonymous">Stay Anonymous?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="anonymous_donor">Anonymous</string>
    <string name="settings">Settings</string>
    <string name="view_profile">View Profile</string>
    <string name="password">Password</string>
    <string name="anonymous">Anonymous?</string>
    <string name="phone_number">Phone number</string>
    <string name="blood_group">Blood Group</string>
    <string name="your_name">Your name</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_photo">Change photo</string>
    <string name="reset_my_password">Reset my password</string>
    <string name="reset_your_email_here">Reset your email</string>
    <string name="enter_current_email">Enter current email</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="search">search...</string>
    <string name="select_your_blood_group">Select your blood group</string>
    <string name="reset_your_phone_number_here">Reset your phone number</string>
    <string name="enter_new_phone_number">Enter new phone number</string>
    <string name="anonymous_mode">Anonymous mode</string>
    <string name="welcome_to_blood_donation_world">Welcome to blood donation world</string>
    <string name="login">Login</string>
    <string name="donors">Donors</string>
    <string name="recipients">Recipients</string>
    <string name="my_profile">My profile</string>
    <string name="password_reset">Password reset</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="phone_number_reset">Phone number reset</string>
    <string name="email_reset">Email reset</string>
    <string name="new_phone_number">New phone number</string>
    <string name="reset_my_phone_number">Reset my phone number</string>
    <string name="no_user_is_compatible_with_you">No user is compatible with you</string>
    <string name="type">Type</string>
    <string name="chat">Chat</string>
    <string name="contact">Contact</string>
    <string name="reset">Reset</string>
    <string name="lifesource_is_an_application_which_makes_blood_donation_alot_easier_by_making_it_possible_to_connect_the_donor_and_the_recipient_on_tha_same_platform_while_guarding_the_anonymity_of_the_donors_n">LifeSource is an application which makes blood donation Alot easier by making it possible to connect the donor and the recipient on tha same platform while guarding the anonymity of the Donors \n</string>
    <string name="type_a_message">Type a Message ...</string>
    <string name="online">Online</string>
    <string name="this_could_be_your_first_name_or_a_nickname_it_s_how_you_ll_appear_on_blood_donation_app">This could be your first name or a nickname. Its how you will appear on Blood Donation App.</string>

    <string-array name="bloodGroups">
        <item>Select your blood group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array></resources>