<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="@dimen/_5sdp"
    android:paddingStart="@dimen/_20sdp"
    android:paddingEnd="@dimen/_20sdp"
    android:background="@drawable/header_background">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/navUserImage"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/white"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/profile_image"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/navUserFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:fontFamily="@font/lato_regular"
            android:textStyle="bold"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/white"/>


        <TextView
            android:id="@+id/navUserBloodGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/blood_group"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/white"/>

    </LinearLayout>



    <TextView
        android:id="@+id/navUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_gmail_com"
        android:textSize="@dimen/_14ssp"
        android:visibility="gone"
        android:fontFamily="@font/lato_regular"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/navUserType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/type"
        android:textAllCaps="true"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/white"/>


</LinearLayout>