<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/WhiteBackground"
    tools:context=".activities.Settings.ChangePasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/MainRed"
        android:elevation="@dimen/_4sdp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/discard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_reset"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:fontFamily="@font/lato_light"
                android:textSize="22sp"
                android:textStyle="bold"/>


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginLeft="@dimen/_134sdp"
            android:layout_marginTop="@dimen/_30sdp"
            />

        <TextView
            android:id="@+id/textReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_your_password_here"
            android:fontFamily="@font/lato_light"
            android:textColor="@color/PrimaryText"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="20dp"
            android:layout_below="@id/logo"/>
        <EditText
            android:id="@+id/currentPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/current_password"
            android:textColor="@color/PrimaryText"
            android:textColorHint="@color/HintColorText"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:layout_centerHorizontal="true"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:drawableEnd="@drawable/ic_baseline_visibility_24"
            android:longClickable="false"
            android:paddingEnd="20dp"
            android:layout_below="@+id/textReset"/>

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:textColor="@color/PrimaryText"
            android:textColorHint="@color/HintColorText"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:layout_centerHorizontal="true"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:drawableEnd="@drawable/ic_baseline_visibility_24"
            android:longClickable="false"
            android:paddingEnd="20dp"
            android:layout_below="@+id/currentPassword"/>

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_password"
            android:textColor="@color/PrimaryText"
            android:textColorHint="@color/HintColorText"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/newPassword"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:drawableEnd="@drawable/ic_baseline_visibility_24"
            android:longClickable="false"
            android:paddingEnd="20dp"/>

        <Button
            android:id="@+id/resetButton"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_regular"
            android:textSize="@dimen/_20ssp"
            android:background="@drawable/button_bg"
            android:layout_below="@id/confirmPassword"/>
    </RelativeLayout>


</LinearLayout>